--- a/src/index.html
+++ b/src/index.html
@@ -27,8 +27,7 @@
     <div id="wrapper">
         <div id="nav" ng-include="'nav/nav.html'"></div>
         <!-- main -->
-        <div class="intro_section" ui-view="addressBookSearchBox"></div>
-        <div class="result_section" ui-view="addressBookResultBox"></div>
+        <div class="container" ui-view="addressbook"></div>
     </div>
   </body>
 </html>
